Implement local login and register

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -5,5 +5,9 @@
     "email_invalid": " ایمیل وارد شده اشتباه است.",
     "password_empty": "فیلد کلمه عبور نمیتواند خالی باشد.",
     "password_short": "کلمه عبور نباید کمتر از 8 کاراکتر باشد.",
-    "captcha_invalid": "پاسخ کپچا نامعتبر است."
+    "captcha_invalid": "پاسخ کپچا نامعتبر است.",
+    "email_exists": "چنین کاربری قبلا در سایت ثبت نام کرده است.",
+    "register_error": "خطایی در فرآیند ثبت نام رخ داده است. لطفا دوباره تلاش کنید.",
+    "user_invalid": "ایمیل یا رمز عبور صحیح نیست.",
+    "login_error": "خطایی در فرآیند ورود رخ داده است. لطفا دوباره تلاش کنید."
 }
