Auth with google OAuth

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -9,5 +9,6 @@
     "email_exists": "چنین کاربری قبلا در سایت ثبت نام کرده است.",
     "register_error": "خطایی در فرآیند ثبت نام رخ داده است. لطفا دوباره تلاش کنید.",
     "user_invalid": "ایمیل یا رمز عبور صحیح نیست.",
-    "login_error": "خطایی در فرآیند ورود رخ داده است. لطفا دوباره تلاش کنید."
+    "login_error": "خطایی در فرآیند ورود رخ داده است. لطفا دوباره تلاش کنید.",
+    "google_login_error": "خطایی در فرآیند ورود رخ داده است. لطفا دوباره تلاش کنید."
 }
