Send reset pass email and add pass reset page

--- a/lang/fa.json
+++ b/lang/fa.json
@@ -10,5 +10,10 @@
     "register_error": "خطایی در فرآیند ثبت نام رخ داده است. لطفا دوباره تلاش کنید.",
     "user_invalid": "ایمیل یا رمز عبور صحیح نیست.",
     "login_error": "خطایی در فرآیند ورود رخ داده است. لطفا دوباره تلاش کنید.",
-    "google_login_error": "خطایی در فرآیند ورود رخ داده است. لطفا دوباره تلاش کنید."
+    "google_login_error": "خطایی در فرآیند ورود رخ داده است. لطفا دوباره تلاش کنید.",
+    "email_not_exists": "چنین کاربری وجود ندارد.",
+    "pass_reset_error": "خطایی در فرآیند بازیابی رمز عبور پیش آمده است. لطفا دوباره تلاش کنید.",
+    "pass_reset_success": "ایمیلی حاوی لینک بازیابی رمز عبور برای شما ارسال شد.",
+    "pass_reset_email_subject": "بازیابی رمز عبور",
+    "pass_reset_email_text": "برای ایجاد رمز عبور جدید، روی لینک زیر کلیک کنید."
 }
