--- a/lang/fa.json
+++ b/lang/fa.json
@@ -15,5 +15,8 @@
     "pass_reset_error": "خطایی در فرآیند بازیابی رمز عبور پیش آمده است. لطفا دوباره تلاش کنید.",
     "pass_reset_success": "ایمیلی حاوی لینک بازیابی رمز عبور برای شما ارسال شد.",
     "pass_reset_email_subject": "بازیابی رمز عبور",
-    "pass_reset_email_text": "برای ایجاد رمز عبور جدید، روی لینک زیر کلیک کنید."
+    "pass_reset_email_text": "برای ایجاد رمز عبور جدید، روی لینک زیر کلیک کنید.",
+    "pass_reset_confirm_error": "رمز عبور و تکرار آن با هم برابر نیست.",
+    "pass_reset_data_error": "اطلاعات وارد شده صحیح نیست. لطفا دوباره تلاش نمایید.",
+    "pass_reset_used": "شما قبلا از این لینک تغییر رمز عبور استفاده کرده‌اید."
 }
